src/main/metadata/objects/Account_Statement__c.object
<CustomObject>
    <fields>
        <fullName>Composite_Transaction_Identifier__c</fullName>
        <description>This is combination of BPID,Contract Id and Transaction Id</description>
        <formula>FS_Contract__r.Borrower__r.BPID__c+"-"+FS_Contract__r.Contract_ID__c+"-"+Transaction_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Composite Transaction Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit__c</fullName>
        <label>Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debit__c</fullName>
        <label>Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FS_Contract__c</fullName>
        <label>FS Contract</label>
        <referenceTo>FS_Contract__c</referenceTo>
        <relationshipLabel>Account Statements</relationshipLabel>
        <relationshipName>Account_Statements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <description>It is used for storing transaction Id coming RMW.</description>
        <label>Transaction Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transction_Description__c</fullName>
        <label>Transction Description</label>
        <type>TextArea</type>
    </fields>
    <label>Account Statement</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Account Statement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>